# netflux

./: .gitignore  LICENSE  README.md  __init__.py  core.py  overrides.py  pyproject.toml  runtime.py
.github/workflows/: publish.yml  tests.yml
demos/: README.md  apply_diff.py  auth_factory.py  bash_stress.py  basic.py  perf_demo.py  perf_opt.py  puzzle.py  test_integration.py  tree_str.py  tui.py
func_lib/: __init__.py  apply_diff.py  bash.py  bash_func.py  ensemble.py  raise_exception.py  text_editor.py
providers/: __init__.py  anthropic.py  gemini.py
tests/: __init__.py  perf_demo.py  test_agentnode.py  test_arg_validation.py  test_bash_function.py  test_console_render.py  test_func_validation.py  test_integration.py  test_node.py  test_runcontext.py  test_runtime.py  test_text_editor.py
tests/tui/: __init__.py  test_console_render.py  test_tui_controllers.py
tests/viz/: __init__.py  test_console_render.py  test_viz_controllers.py
tui/: SPEC.md  __init__.py  _contracts.py  _controller_helpers.py  _controllers.py  _driver.py  _logging.py  _terminal_io.py  console.py  tui.py
viz/: SPEC.md  __init__.py  _controllers.py  _driver.py  console.py  tui.py  viz.py
