[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netflux"
version = "0.3.3"
maintainers = [
  { name="LW Computational Science Research Foundation" },
]
description = "Framework for authoring custom agentic applications, treating agents as first-class functions."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "overrides",
]

[project.urls]
Homepage = "https://github.com/lwcsrf/netflux"
Repository = "https://github.com/lwcsrf/netflux"
Issues = "https://github.com/lwcsrf/netflux/issues"

[project.optional-dependencies]
# For developers running unit tests
test = [
    "pytest",
]

# Optional `tui` subpackage dependencies
tui = [
    "rich>=12.6.0",
]

# Provider-specific dependencies
anthropic = [
    "anthropic>=0.86.0, <1.0.0",
    "httpx[http2]",
]
gemini = [
    "google-genai>=1.68.0, <2.0.0",
    "httpx[http2]",
]
openai = ["openai>=2.29.0, <3.0.0"]
xai = ["xai-sdk>=1.9.1, <2.0.0"]

# A convenience group to install all provider clients
# if running the demos or doing E2E integration tests.
all = [
    "netflux[test]",
    "netflux[tui]",
    "netflux[anthropic]",
    "netflux[gemini]",
    "netflux[openai]",
    "netflux[xai]",
]

[tool.setuptools]
packages = [
    "netflux",
    "netflux.providers",
    "netflux.tests",
    "netflux.tests.tui",
    "netflux.tui",
    "netflux.func_lib",
    "netflux.demos",
]

[tool.setuptools.package-dir]
netflux = "."

[tool.setuptools.package-data]
netflux = [
    "assets/*",
]
